# mini_miloco

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mini_miloco/: __init__.py  auth.py  http.py  server.py
mini_miloco/tests/: test_smoke.py
miot_kit/miot/: client.py
scripts/: install.sh  setup_deps.sh  start.sh  test_mcp_http.py
scripts/launchd/: mini-miloco-http.plist
scripts/systemd/: mini-miloco-http.service
